feat: directory handling class

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,5 +7,6 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ## [Unreleased]
 
 ### Added
-- Class File
+- Directory handling class
+- File handling class
 - Changelog
