traversing the directory

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,10 +6,16 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 ## Unreleased
 
+## 0.0.2
+
+### Added
+
+- Traversing the directory
 
 ## 0.0.1
 
 ### Added
+
 - Directory handling class
 - File handling class
 - Changelog
