--- a/CHANGELOG
+++ b/CHANGELOG
@@ -8,7 +8,8 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 ### Fixed
 
- - Traits\Directory only creates directories if not existant
+- Traits\Directory only creates directories if not existant
+- Traits\Directory mutes warnings due to open_basedir restrictions
 
 ## 0.0.3
 
